// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Packer Lerna should aggregate any analytics 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "location": "/Users/janbiasi/github/monopacker/test/fixtures/basic/packages/sub",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.0",
      },
    ],
    "peer": Object {
      "smallest": "1.0.1",
    },
  },
  "graph": Object {
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
  },
  "integrity": "a6f45535ac6082d0e0067d9e02c168d69626bd6333c9aea6d38b0eadae0de14c",
}
`;

exports[`Packer Lerna should generate a hash for the packed bundle 1`] = `"b2993282819eec66b266565a2f6d1b6283b85e836c4f4b932cfe28bfbf5d7498"`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 1`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "location": "/Users/janbiasi/github/monopacker/test/fixtures/basic/packages/sub",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.0",
      },
    ],
    "peer": Object {
      "smallest": "1.0.1",
    },
  },
  "graph": Object {
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
  },
  "integrity": "a6f45535ac6082d0e0067d9e02c168d69626bd6333c9aea6d38b0eadae0de14c",
}
`;

exports[`Packer Lerna should generate a monopacker.analytics.json file 2`] = `
Object {
  "dependencies": Object {
    "external": Object {
      "debug": "*",
    },
    "internal": Array [
      Object {
        "description": "",
        "location": "/Users/janbiasi/github/monopacker/test/fixtures/basic/packages/sub",
        "name": "@fixture/sub",
        "private": false,
        "version": "0.1.0",
      },
    ],
    "peer": Object {
      "smallest": "1.0.1",
    },
  },
  "graph": Object {
    "@fixture/sub": Object {
      "smallest": "1.0.1",
    },
  },
  "integrity": "a6f45535ac6082d0e0067d9e02c168d69626bd6333c9aea6d38b0eadae0de14c",
}
`;

exports[`Packer Lerna should generate an artificial package correctly 1`] = `
Object {
  "dependencies": Object {
    "debug": "*",
    "smallest": "1.0.1",
  },
  "description": "",
  "monopacker": Object {
    "hash": "b2993282819eec66b266565a2f6d1b6283b85e836c4f4b932cfe28bfbf5d7498",
    "linked": Object {
      "@fixture/sub": "0.1.0",
    },
    "version": "1.0.0",
  },
  "name": "@fixture/main-packed",
  "version": "0.2.7",
}
`;

exports[`Packer Lerna should generate correct metadata for the packed bundle 1`] = `
Object {
  "hash": "b2993282819eec66b266565a2f6d1b6283b85e836c4f4b932cfe28bfbf5d7498",
  "linked": Object {
    "@fixture/sub": "0.1.0",
  },
  "version": "1.0.0",
}
`;
